--- a/index.html
+++ b/index.html
@@ -32,9 +32,17 @@
 
     </header>
 
+    <section class="content">
+      <div class="schedule">
+        <div class="sidebar"></div>
+        <div class="days">
+        </div>
+      </div>
+    </section>
+
    
 
-    <div class="popup-layer display-none">
+    <div class="popup-layer">
       <form class="popup event" data-id-event="">
           <span class="popup__btn-close"><img class="close" src="https://img.icons8.com/color/48/000000/close-window.png"></span>
           <input class="event__name" name="eventName" type="text" required placeholder="Добавьте  название">
