--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
    
 
-    <div class="popup-layer">
+    <div class="popup-window display">
       <form class="popup event" data-id-event="">
           <span class="popup__btn-close"><img class="close" src="https://img.icons8.com/color/48/000000/close-window.png"></span>
           <input class="event__name" name="eventName" type="text" required placeholder="Добавьте  название">
