--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
                 <div class="navigation__arows_left"></div>
                 <div class="navigation__arows_right"></div>
             </div>
-            <div class="navigation__MonthAndYear">
-                <span class="monthNow">Dec</span>
-                <span class="mounthFutuar"></span>
-                <span class="year">2019</span>
-            </div>
+            <div class="navigation__MonthAndYear"></div>
         </nav>
         <div class="week"></div>
 
@@ -58,8 +54,7 @@
           <textarea class="event__description" name="eventDescription" cols="15" rows="5"
               placeholder="Добавьте описание"></textarea>
           <div class="footer-popup">
-              <span class="event__btn-delete"><img class="bascket"
-                      src="https://img.icons8.com/windows/32/000000/trash.png"></span>
+              <span class="event__btn-delete"><img class="bascket" src="https://img.icons8.com/windows/32/000000/trash.png"></span>
               <button class="event__btn-save">Сохрнить</button>
           </div>
       </form>
