--- a/index.html
+++ b/index.html
@@ -11,57 +11,56 @@
 </head>
 
 <body>
-    <header class="header">
-        <nav class="navigation">
-            <button class="navigation_create">
+    <header>
+        <nav class="navigate">
+            <button class="navigate_create">
                 <img src="https://img.icons8.com/color/48/000000/plus-math.png" class="plus">
                 Create
             </button>
-            <button class="navigation_today">Today</button>
-            <div class="navigation__arows">
-                <div class="navigation__arows_left"></div>
-                <div class="navigation__arows_right"></div>
+            <button class="navigate_today">Today</button>
+            <div class="navigate__arows">
+                <div class="navigate__arows_left"></div>
+                <div class="navigate__arows_right"></div>
             </div>
-            <div class="navigation__MonthAndYear"></div>
+            <div class="navigate__MonthAndYear"></div>
         </nav>
         <div class="week"></div>
-
     </header>
 
-    <section class="content">
-      <div class="schedule">
-        <div class="sidebar"></div>
-        <div class="days">
+    <section class="main">
+        <div class="schedule">
+          <div class="sidebar"></div>
+          <div class="days">
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
+  
 
-   
-
-    <div class="popup-window display">
-      <form class="popup event" data-id-event="">
-          <span class="popup__btn-close"><img class="close" src="https://img.icons8.com/color/48/000000/close-window.png"></span>
-          <input class="event__name" name="eventName" type="text" required placeholder="Добавьте  название">
-          <div class="popup__picker">
-              <img class="clock" src="https://img.icons8.com/pastel-glyph/64/000000/time.png">
-              <input class="event__date-start" name="eventDateStart" required type="date">
-              <select class="event__time-start select" size="1" name="eventTimeStart" required></select>
-              <span class='line'></span>
-              <select class="event__time-end select" name="eventTimeEnd" required></select>
-              <input class="event__date-end" name="eventDateEnd" required type="date">
-          </div>
-          <img class="multilineText" src="https://img.icons8.com/windows/32/000000/multiline-text.png">
-          <textarea class="event__description" name="eventDescription" cols="15" rows="5"
-              placeholder="Добавьте описание"></textarea>
-          <div class="footer-popup">
-              <span class="event__btn-delete"><img class="bascket" src="https://img.icons8.com/windows/32/000000/trash.png"></span>
-              <button class="event__btn-save">Сохрнить</button>
-          </div>
-      </form>
-  </div>
-
-    
-    <script src="src/scripts/index.js" type="module"></script>
+    <div class="popup-alert display-none">
+        <form class="popup event" data-id-event="">
+            <span class="popup__btn-close"><img class="close"
+                    src="https://img.icons8.com/color/48/000000/close-window.png"></span>
+            <input class="event__name" name="eventName" type="text" required placeholder="Add title ">
+     
+            <div class="popup__picker">
+                <img class="clock" src="https://img.icons8.com/pastel-glyph/64/000000/time.png">
+                <input class="event__date-start" name="eventDateStart" required type="date">
+                <select class="event__time-start select" size="1" name="eventTimeStart" required></select>
+                <span class='line'></span>
+                <select class="event__time-end select" name="eventTimeEnd" required></select>
+                <input class="event__date-end" name="eventDateEnd" required type="date">
+            </div>
+            <img class="multilineText" src="https://img.icons8.com/windows/32/000000/multiline-text.png">
+            <textarea class="event__description" name="eventDescription" cols="15" rows="5"
+                placeholder="Add description"></textarea>
+            <div class="footer-popup">
+                <span class="event__btn-delete"><img class="bascket"
+                        src="https://img.icons8.com/windows/32/000000/trash.png"></span>
+                <button class="event__btn-save">Save</button>
+            </div>
+        </form>
+    </div>
+    <script src="src/script/index.js" type="module"></script>
 </body>
 
 </html>
