--- a/index.html
+++ b/index.html
@@ -30,10 +30,19 @@
     <section class="main">
         <div class="schedule">
           <div class="sidebar"></div>
-          <div class="days">
+          <div class="days"></div>
           </div>
         </div>
       </section>
+
+      <div class="block">
+        <div class="column"></div>
+        <div class="column"></div>
+        <div class="column"></div>
+     
+      </div>
+
+
   
 
     <div class="popup-alert display-none">
