--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
             <span class="popup__btn-close"><img class="close"
                     src="https://img.icons8.com/color/48/000000/close-window.png"></span>
             <input class="event__name" name="eventName" type="text" required placeholder="Add title ">
-     
+            <div class="popup__color-picker">
+                <label class="popup__color-picker_label">
+                  <span class="popup__color-picker_label-text">Select a color</span>
+                  <input class="event__color-picker" type="color" name="color" value="#4183f1">
+                </label>
+              </div>        
             <div class="popup__picker">
                 <img class="clock" src="https://img.icons8.com/pastel-glyph/64/000000/time.png">
                 <input class="event__date-start" name="eventDateStart" required type="date">
