--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="schedule">
           <div class="sidebar"></div>
           <div class="days"></div>
+          <div class="redLine"></div>
 
           </div>
 
@@ -50,17 +51,14 @@
             <div class="popup__picker">
                 <img class="clock" src="https://img.icons8.com/pastel-glyph/64/000000/time.png">
                 <input class="event__date-start" name="eventDateStart" required type="date">
-                <select class="event__time-start select" size="1" name="eventTimeStart" required></select>
+                <input class="event__time-start select" size="1" name="eventTimeStart" required type="time">
                 <span class='line'></span>
-                <select class="event__time-end select" name="eventTimeEnd" required></select>
-                <input class="event__date-end" name="eventDateEnd" required type="date">
+                <input class="event__time-end select" name="eventTimeEnd" required  type="time"> 
             </div>
             <img class="multilineText" src="https://img.icons8.com/windows/32/000000/multiline-text.png">
             <textarea class="event__description" name="eventDescription" cols="15" rows="5"
                 placeholder="Add description"></textarea>
             <div class="footer-popup">
-                <span class="event__btn-delete"><img class="bascket"
-                        src="https://img.icons8.com/windows/32/000000/trash.png"></span>
                 <button class="event__btn-save">Save</button>
             </div>
         </form>
