--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
           <div class="sidebar"></div>
           <div class="days"></div>
           <div class="redLine"></div>
-
           </div>
 
       </section>
@@ -51,9 +50,9 @@
             <div class="popup__picker">
                 <img class="clock" src="https://img.icons8.com/pastel-glyph/64/000000/time.png">
                 <input class="event__date-start" name="eventDateStart" required type="date">
-                <input class="event__time-start select" size="1" name="eventTimeStart" required type="time">
+                <select class="event__time-start select" size="1" name="eventTimeStart" required></select>
                 <span class='line'></span>
-                <input class="event__time-end select" name="eventTimeEnd" required  type="time"> 
+                <select class="event__time-end select" name="eventTimeEnd" required></select>
             </div>
             <img class="multilineText" src="https://img.icons8.com/windows/32/000000/multiline-text.png">
             <textarea class="event__description" name="eventDescription" cols="15" rows="5"
