--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
                 <span class='line'></span>
                 <select class="event__time-end select" name="eventTimeEnd" required></select>
             </div>
-            <img class="multilineText" src="https://img.icons8.com/windows/32/000000/multiline-text.png">
-            <textarea class="event__description" name="eventDescription" cols="15" rows="5"
-                placeholder="Add description"></textarea>
+            <div class="popup__description">
+                <img class="multilineText" src="https://img.icons8.com/windows/32/000000/multiline-text.png">
+                <textarea class="event__description" name="eventDescription" cols="15" rows="5"
+                    placeholder="Add description"></textarea>
+            </div>
             <div class="footer-popup">
                 <button class="event__btn-save">Save</button>
             </div>
