--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
         <div class="schedule">
           <div class="sidebar"></div>
           <div class="days"></div>
-          <div class="day-event">Event <br>
-              <span>10:00 - 11:00</span>
-          </div>
+          <div class="day-event">Event</div>
           <div class="redLine"></div>
           </div>
       </section>
