--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
             <div class="popup__picker">
                 <img class="clock" src="https://img.icons8.com/pastel-glyph/64/000000/time.png">
                 <input class="event__date-start" name="eventDateStart" required type="date">
-                <select class="event__time-start select" size="1" name="eventTimeStart" required></select>
+                <input class="event__time-start select" size="1" name="eventTimeStart"  type="time" required>
                 <span class='line'></span>
-                <select class="event__time-end select" name="eventTimeEnd" required></select>
+                <input class="event__time-end select" name="eventTimeEnd" type="time" required>
             </div>
             <div class="popup__description">
                 <img class="multilineText" src="https://img.icons8.com/windows/32/000000/multiline-text.png">
