--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <div class="week"></div>
     </header>
 
-    <section class="main">
+    <div class="main">
         <div class="schedule">
           <div class="sidebar"></div>
           <div class="days"></div>
           <div class="day-event">Event</div>
           <div class="redLine"></div>
           </div>
-      </section>
+    </div>
 
     <div class="popup-alert display-none">
         <form class="popup event" data-id-event="">
