--- a/index.html
+++ b/index.html
@@ -27,14 +27,12 @@
         <div class="week"></div>
     </header>
 
-    <div class="main">
+    <section class="main">
         <div class="schedule">
           <div class="sidebar"></div>
-          <div class="days"></div>
-          <div class="day-event">Event</div>
-          <div class="redLine"></div>
+          <div class="calendar__week"></div>
           </div>
-    </div>
+    </section>
 
     <div class="popup-alert display-none">
         <form class="popup event" data-id-event="">
@@ -50,10 +48,9 @@
             <div class="popup__picker">
                 <img class="clock" src="https://img.icons8.com/pastel-glyph/64/000000/time.png">
                 <input class="event__date-start" name="eventDateStart" required type="date">
-                <input class="event__time-start select" size="1" name="eventTimeStart"  type="time" required>
+                <input class="event__time-start select" size="1" name="eventTimeStart"  type="time"    min="00:00" max="24:00" required>
                 <span class='line'></span>
-               
-                <input class="event__time-end select" name="eventTimeEnd" type="time" required>
+                <input class="event__time-end select" name="eventTimeEnd" type="time"    min="00:00" max="24:00" required>
             </div>
             <div class="popup__description">
                 <img class="multilineText" src="https://img.icons8.com/windows/32/000000/multiline-text.png">
