--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="schedule">
           <div class="sidebar"></div>
           <div class="calendar__week"></div>
+          <div class="day-event">111</div>
           </div>
     </section>
 
